labs/lab04/istiofiles/virtual-service-cxfrs-test-abort.yaml
apiVersion: networking.istio.io/v1alpha3
kind: VirtualService
metadata:
  name: cxfrs-service
  ...
spec:
  hosts:
  - cxfrs-service
  http:
  - fault:
      abort:
        httpStatus: 500
        percent: 100
    match:
    - headers:
        magic-word:
          exact: breakit
    route:
    - destination:
        host: cxfrs-service
        subset: v1
  - route:
    - destination:
        host: cxfrs-service
        subset: v1
